--- a/ID_Studio_2/package.json
+++ b/ID_Studio_2/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jessica Nieves",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
